replace (long) witn (int)