@@ -1,8 +1,7 @@
 package ru.vsu.cs.uvarov_d_p.oop.tests;
 
 import org.junit.Test;
-import ru.vsu.cs.uvarov_d_p.oop.linked_list.CircularLinkedList;
-import ru.vsu.cs.uvarov_d_p.oop.linked_list.Node;
+import ru.vsu.cs.uvarov_d_p.oop.linked_list.DoublyLinkedList;
 import ru.vsu.cs.uvarov_d_p.oop.linked_list.SimpleLinkedListException;
 
 import static org.junit.Assert.assertTrue;
@@ -10,132 +9,102 @@ import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertThrows;
 
-public class CircularLinkedListTest {
+public class DoublyLinkedListTest {
 
     @Test
     public void testEmptyList() {
-        CircularLinkedList<Integer> list = new CircularLinkedList<>();
+        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
         assertTrue(list.isEmpty());
         assertEquals(0, list.size());
     }
 
     @Test
     public void testAddFirst() throws SimpleLinkedListException {
-        CircularLinkedList<Integer> list = new CircularLinkedList<>();
+        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
         list.addFirst(1);
         list.addFirst(2);
 
         assertEquals(2, list.size());
-        assertEquals(2, (long) list.getFirst());
-        assertEquals(1, (long) list.getLast());
+        assertEquals(2, (int) list.getFirst());
+        assertEquals(1, (int) list.getLast());
     }
 
     @Test
     public void testAddLast() throws SimpleLinkedListException {
-        CircularLinkedList<Integer> list = new CircularLinkedList<>();
+        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
         list.addLast(1);
         list.addLast(2);
 
         assertEquals(2, list.size());
-        assertEquals(1,(long) list.getFirst());
-        assertEquals(2, (long) list.getLast());
-    }
-
-    @Test
-    public void testCircularStructure() throws SimpleLinkedListException {
-        CircularLinkedList<Integer> list = new CircularLinkedList<>();
-        list.addLast(1);
-        list.addLast(2);
-        list.addLast(3);
-
-        assertEquals(1, (long) list.getFirst());
-        assertEquals(3, (long) list.getLast());
-
-        Node<Integer> lastNode = list.getItem(2);
-        assertEquals(list.getFirst(), lastNode.next.value);
-
-        Node<Integer> firstNode = list.getItem(0);
-        assertEquals(list.getLast(), firstNode.prev.value);
+        assertEquals(1, (int) list.getFirst());
+        assertEquals(2, (int) list.getLast());
     }
 
     @Test
     public void testInsert() throws SimpleLinkedListException {
-        CircularLinkedList<Integer> list = new CircularLinkedList<>();
+        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
         list.addLast(1);
         list.addLast(3);
         list.insert(1, 2);
 
         assertEquals(3, list.size());
-        assertEquals(1, (long) list.get(0));
-        assertEquals(2, (long) list.get(1));
-        assertEquals(3, (long) list.get(2));
+        assertEquals(1, (int) list.get(0));
+        assertEquals(2, (int) list.get(1));
+        assertEquals(3, (int) list.get(2));
     }
 
     @Test
     public void testRemoveFirst() throws SimpleLinkedListException {
-        CircularLinkedList<Integer> list = new CircularLinkedList<>();
+        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
         list.addLast(1);
         list.addLast(2);
         list.addLast(3);
 
-        assertEquals(1, (long) list.removeFirst());
+        assertEquals(1, (int) list.removeFirst());
         assertEquals(2, list.size());
-        assertEquals(2, (long) list.getFirst());
-        assertEquals(3, (long) list.getLast());
-
-        assertEquals(list.getFirst(), list.getItem(1).prev.value);
-        assertEquals(list.getLast(), list.getItem(0).next.value);
+        assertEquals(2, (int) list.getFirst());
     }
 
     @Test
     public void testRemoveLast() throws SimpleLinkedListException {
-        CircularLinkedList<Integer> list = new CircularLinkedList<>();
+        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
         list.addLast(1);
         list.addLast(2);
         list.addLast(3);
 
-        assertEquals(3, (long) list.removeLast());
+        assertEquals(3, (int) list.removeLast());
         assertEquals(2, list.size());
-        assertEquals(1, (long) list.getFirst());
-        assertEquals(2, (long) list.getLast());
-
-        assertEquals(list.getFirst(), list.getItem(1).prev.value);
-        assertEquals(list.getLast(), list.getItem(0).next.value);
+        assertEquals(2, (int) list.getLast());
     }
 
     @Test
     public void testRemoveByIndex() throws SimpleLinkedListException {
-        CircularLinkedList<Integer> list = new CircularLinkedList<>();
+        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
         list.addLast(1);
         list.addLast(2);
         list.addLast(3);
 
-        assertEquals(2, (long) list.remove(1));
+        assertEquals(2, (int) list.remove(1));
         assertEquals(2, list.size());
-        assertEquals(1, (long) list.get(0));
-        assertEquals(3, (long) list.get(1));
+        assertEquals(1, (int) list.get(0));
+        assertEquals(3, (int) list.get(1));
     }
 
     @Test
-    public void testSingleElementCircular() throws SimpleLinkedListException {
-        CircularLinkedList<Integer> list = new CircularLinkedList<>();
-        list.addFirst(42);
+    public void testGetByIndex() throws SimpleLinkedListException {
+        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
+        list.addLast(10);
+        list.addLast(20);
+        list.addLast(30);
 
-        assertEquals(1, list.size());
-        assertEquals(42, (long) list.getFirst());
-        assertEquals(42, (long) list.getLast());
-
-        Node<Integer> node = list.getItem(0);
-        assertEquals(node, node.next);
-        assertEquals(node, node.prev);
-
-        assertEquals(42, (long) list.removeFirst());
-        assertTrue(list.isEmpty());
+        assertEquals(10, (int) list.get(0));
+        assertEquals(20, (int) list.get(1));
+        assertEquals(30, (int) list.get(2));
     }
 
     @Test
     public void testContains() {
-        CircularLinkedList<String> list = new CircularLinkedList<>();
+        DoublyLinkedList<String> list = new DoublyLinkedList<>();
         list.addLast("apple");
         list.addLast("banana");
         list.addLast("orange");
@@ -147,7 +116,7 @@ public class CircularLinkedListTest {
 
     @Test
     public void testClear() {
-        CircularLinkedList<Integer> list = new CircularLinkedList<>();
+        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
         list.addLast(1);
         list.addLast(2);
         list.addLast(3);
@@ -159,7 +128,7 @@ public class CircularLinkedListTest {
 
     @Test
     public void testIterator() {
-        CircularLinkedList<Integer> list = new CircularLinkedList<>();
+        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
         list.addLast(1);
         list.addLast(2);
         list.addLast(3);
@@ -173,26 +142,8 @@ public class CircularLinkedListTest {
     }
 
     @Test
-    public void testCircularIterator() {
-        CircularLinkedList<Integer> list = new CircularLinkedList<>();
-        list.addLast(1);
-        list.addLast(2);
-
-        int count = 0;
-        int sum = 0;
-        for (Integer value : list.circularIterator()) {
-            sum += value;
-            count++;
-            if (count >= 6) break;
-        }
-
-        assertEquals(9, sum);
-        assertEquals(6, count);
-    }
-
-    @Test
     public void testEmptyListExceptions() {
-        CircularLinkedList<Integer> list = new CircularLinkedList<>();
+        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
 
         assertThrows(SimpleLinkedListException.class, list::getFirst);
         assertThrows(SimpleLinkedListException.class, list::getLast);
@@ -203,7 +154,7 @@ public class CircularLinkedListTest {
 
     @Test
     public void testInvalidIndexExceptions() {
-        CircularLinkedList<Integer> list = new CircularLinkedList<>();
+        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
         list.addLast(1);
 
         assertThrows(SimpleLinkedListException.class, () -> list.get(-1));
@@ -215,28 +166,39 @@ public class CircularLinkedListTest {
     }
 
     @Test
-    public void testComplexScenario() throws SimpleLinkedListException {
-        CircularLinkedList<Integer> list = new CircularLinkedList<>();
+    public void testSingleElementList() throws SimpleLinkedListException {
+        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
+        list.addFirst(42);
+
+        assertEquals(1, list.size());
+        assertEquals(42, (int) list.getFirst());
+        assertEquals(42, (int) list.getLast());
+        assertEquals(42, (int) list.get(0));
+        assertTrue(list.contains(42));
+
+        assertEquals(42, (int) list.removeFirst());
+        assertTrue(list.isEmpty());
+    }
+
+    @Test
+    public void testMultipleOperations() throws SimpleLinkedListException {
+        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
 
         for (int i = 0; i < 5; i++) {
             list.addLast(i);
         }
 
         assertEquals(5, list.size());
-        assertEquals(0, (long) list.getFirst());
-        assertEquals(4, (long) list.getLast());
+        assertEquals(0, (int) list.getFirst());
+        assertEquals(4, (int) list.getLast());
 
-        assertEquals(2, (long) list.remove(2));
+        assertEquals(2, (int) list.remove(2));
         assertEquals(4, list.size());
 
         list.addFirst(-1);
-        assertEquals(-1, (long) list.getFirst());
-
-        assertEquals(list.getFirst(), list.getItem(4).next.value);
-        assertEquals(list.getLast(), list.getItem(0).prev.value);
+        assertEquals(-1, (int) list.getFirst());
 
         list.clear();
         assertTrue(list.isEmpty());
     }
 }
-
